# misc

deno/sanctuary-deno/: esm_sh.ts  skypack.ts
haskell/arithmetic-expression/: ChangeLog.md  arithmetic-expression.cabal  package.yaml
haskell/arithmetic-expression/app/: AST.hs  ExpressionParser.hs  Main.hs
haskell/arithmetic_expression/: CHANGELOG.md  arithmetic-expression.cabal  hie.yaml
haskell/arithmetic_expression/app/: Main.hs
haskell/optparse-applicative-example/: CHANGELOG.md  optparse-applicative-example.cabal
haskell/optparse-applicative-example/app/: Main.hs
haskell/parsec-example1/: CHANGELOG.md  parsec-example1.cabal
haskell/parsec-example1/app/: Main.hs
haskell/quickcheck-example1/: CHANGELOG.md  quickcheck-example1.cabal
haskell/quickcheck-example1/app/: Main.hs
node/yargs_example/: index.ts  multiple_commands.ts  number.ts  package.json
react/katex-mermaid/: package.json
react/katex-mermaid/src/: App.tsx
react/vite-jest-swc-example/: jest.config.js  package.json
react/vite-jest-swc-example/src/: App.test.tsx
